<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomePageActivity"
    android:exported= "true">


    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="194dp"
        android:layout_weight="2">

        <ImageView
            android:id="@+id/subCipherImg"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/outputLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/titleHeaderTxt"
            android:textAlignment="center"
            android:textSize="50sp"
            android:textStyle="bold" />

    </FrameLayout>


    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_weight="1"
        android:text="@string/pigLatinBtn" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_weight="1"
        android:text="@string/caesarBtn" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_weight="1"
        android:text="@string/subsCipherBtn" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:checked="true"
            android:text="@string/encryptRadBtn" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:text="@string/decryptRadBtn" />
    </RadioGroup>


</LinearLayout>