<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/palette_light"
    tools:context=".CaesarShift">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/palette_light">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="900dp"
            android:columnCount="2"
            android:rowCount="5"
            tools:context=".CaesarShift">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_row="0"
                android:layout_rowWeight="3"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:background="@color/palette_light"
                android:weightSum="2">

                <ImageView
                    android:id="@+id/subCipherImg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/caesarShiftImgDescr"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/roman_photo" />

                <TextView
                    android:id="@+id/subCipherTitle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/caesarShiftTitle"
                    android:textAlignment="gravity"
                    android:textAllCaps="true"
                    android:textColor="#090909"
                    android:textSize="40sp"
                    android:textStyle="bold|italic" />

            </FrameLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_row="1"
                android:layout_rowWeight="3"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:background="@color/palette_light"
                android:orientation="vertical"
                android:weightSum="4">


                <TextView
                    android:id="@+id/inputLbl"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:gravity="center|center_vertical"
                    android:text="@string/yourMessageLbl"
                    android:textAlignment="gravity"
                    android:textColor="@color/palette_dark"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/inputTxtInput"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="3"
                    android:background="@color/material_dynamic_neutral99"
                    android:ems="10"
                    android:hint="@string/enterMessHint"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    android:gravity="top"
                    android:textColor="@color/palette_dark"
                    android:textColorHint="#8D6E63" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_row="2"
                android:layout_rowWeight="1.2"
                android:layout_column="0"
                android:layout_columnWeight="2"
                android:background="@color/palette_light"
                android:orientation="horizontal"
                android:weightSum="2">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/keyInputLbl"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:gravity="center"
                        android:text="@string/numShiftsLbl"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textColor="@color/palette_dark"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@+id/caesar_shift_spinner"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Spinner
                        android:id="@+id/caesar_shift_spinner"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginEnd="32dp"
                        android:dropDownWidth="match_parent"
                        android:entries="@array/caesar_shift_array"
                        android:spinnerMode="dropdown"
                        android:textAlignment="center"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/keyInputLbl" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <Button
                    android:id="@+id/encrypt_decryptBtn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="30dp"
                    android:layout_weight="1"
                    android:text="@string/encryptBtn"
                    android:backgroundTint="@color/palette_mid"
                    android:textColor="#000000" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_row="3"
                android:layout_rowWeight="3"
                android:layout_column="0"
                android:layout_columnWeight="2"
                android:background="@color/palette_light"
                android:orientation="vertical"
                android:weightSum="4">

                <TextView
                    android:id="@+id/outputLbl"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/yourCiphLbl"
                    android:textAlignment="gravity"
                    android:textColor="@color/palette_dark"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/outputTxtBox"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="3"
                    android:background="@color/material_dynamic_neutral99"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:textColor="@color/palette_dark" />

            </LinearLayout>

            <LinearLayout
                style="?android:buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_row="4"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:background="@color/palette_light"
                android:orientation="horizontal"
                android:weightSum="4">

                <Button
                    android:id="@+id/copyBtn"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:text="@string/copyBtn"
                    android:backgroundTint="@color/palette_mid"
                    android:textColor="#000000" />

                <Button
                    android:id="@+id/saveBtn"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:text="@string/saveBtn"
                    android:backgroundTint="@color/palette_mid"
                    android:textColor="#000000"/>

                <Button
                    android:id="@+id/shareBtn"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:text="@string/shareBtn"
                    android:backgroundTint="@color/palette_mid"
                    android:textColor="#000000"/>

                <Button
                    android:id="@+id/resetBtn"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:text="@string/resetBtn"
                    android:backgroundTint="@color/palette_mid"
                    android:textColor="#000000" />

            </LinearLayout>


        </GridLayout>
    </LinearLayout>
</ScrollView>


    <!--Image Credit(s)-->

    <!-- roman_photo.jpg  https://www.pexels.com/photo/colosseum-italy-1797161/ - Photo by Chait Goli from Pexels-->